# ProgramDesign_HuffmanCoding

./: CMakeLists.txt
Program/: HuffmanTree.cpp  HuffmanTree.h  Node.cpp  Node.h  main.cpp  system.cpp  system.h
UI/: mainwindow.cpp  mainwindow.h  mainwindow.ui  receiver_interface.cpp  receiver_interface.h  receiver_interface.ui  sender_interface.cpp  sender_interface.h  sender_interface.ui
